--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -16,35 +16,29 @@
         <mat-card class="card">
             <mat-card-title class="card-title">Iniciar sesión</mat-card-title>
             <mat-card-content>
-                <form class="form">
+                <form class="form" [formGroup]="form" (ngSubmit)="login($event)">
                     <mat-form-field appearance="outline">
                       <mat-label>Email</mat-label>
-                      <input type="email" matInput>
-                      <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                        Please enter a valid email address
-                      </mat-error>
-                      <mat-error *ngIf="emailFormControl.hasError('required')">
-                        Email is <strong>required</strong>
-                      </mat-error> -->
+                      <input type="email" matInput formControlName="email">
+                      <mat-error *ngIf="emailControl?.invalid">{{ getEmailErrorMessage() }}</mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                       <mat-label>Contraseña</mat-label>
-                      <input type="password" matInput>
-                      <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                        Please enter a valid email address
-                      </mat-error>
-                      <mat-error *ngIf="emailFormControl.hasError('required')">
-                        Email is <strong>required</strong>
-                      </mat-error> -->
+                      <input [type]="hidePassword? 'password' : 'text'" matInput formControlName="password">
+                      <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword">
+                        <mat-icon *ngIf="hidePassword">visibility</mat-icon>
+                        <mat-icon *ngIf="!hidePassword">visibility_off</mat-icon>
+                      </button>
+                      <mat-error *ngIf="passwordControl?.invalid">{{ getPasswordErrorMessage() }}</mat-error>
                     </mat-form-field>
         
                     <div class="buttons">
-                        <button mat-raised-button color="primary">
+                        <button mat-raised-button color="primary" type="submit">
                             <mat-icon>login</mat-icon>
                             Iniciar sesión
                         </button>
                         <span>- o -</span>
-                        <button mat-stroked-button>
+                        <button mat-stroked-button type="button">
                             <mat-icon>login</mat-icon>
                             Continuar con google
                         </button>
