--- a/src/app/shared/components/rounded-select-search/rounded-select-search.component.html
+++ b/src/app/shared/components/rounded-select-search/rounded-select-search.component.html
@@ -16,6 +16,7 @@
           [disableInitialFocus]="true"
           [formControl]="search"
           placeholderLabel="{{ placeholder }}"
+          [searching]="loading"
           noEntriesFoundLabel="No se encontraron resultados">
         </ngx-mat-select-search>
       </mat-option>
