--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -5,7 +5,7 @@
     min-height: 100%;
 
     // background-color: var(--primary-color);
-    background-image: url('../../../../assets/images/bg-desktop-blue.png');
+    background-image: url('/src/assets/images/bg-desktop-blue.png');
     // background-size: cover;
     background-size: contain;
 }
