--- a/src/app/features/homepage/components/homepage/homepage.component.html
+++ b/src/app/features/homepage/components/homepage/homepage.component.html
@@ -4,8 +4,13 @@
       <h1>Planishare</h1>
     </div> -->
     <div class="logo">
-      <button mat-raised-button [routerLink]="'/'">
-        Planishare
+      <!-- <button mat-raised-button [routerLink]="'/'"> -->
+      <button mat-raised-button (click)="makeSearch($event)" [ngClass]="showSearchButton ? 'search-button' : ''">
+        <ng-container *ngIf="!showSearchButton">Planishare</ng-container>
+        <ng-container *ngIf="showSearchButton">
+          <!-- <mat-icon>search</mat-icon> -->
+          Buscar
+        </ng-container>
       </button>
     </div>
     <div class="subtitle1" *ngIf="!isMobile()">
@@ -16,24 +21,30 @@
     </div>
     <div class="filters">
       <app-rounded-select-search
+        class="filter"
         [list]="academicLevelsList"
         [control]="academicLevelControl"
+        [loading]="isAcademicLevelsLoading"
         buttonText="Nivel Académico"
         bgColor="var(--primary-color)"
         textColor="var(--light-text)"
         placeholder="Buscar nivel académico">
       </app-rounded-select-search>
       <app-rounded-select-search
+        class="filter"
         [list]="subjectList"
         [control]="subjectControl"
+        [loading]="isSubjectsLoading"
         buttonText="Asignatura"
         bgColor="var(--warn-color)"
         textColor="var(--light-text)"
         placeholder="Buscar asignatura">
       </app-rounded-select-search>
       <app-rounded-select-search
+        class="filter"
         [list]="axesList"
         [control]="axisControl"
+        [loading]="isaxesLoading"
         buttonText="Eje"
         bgColor="var(--purple-color)"
         textColor="var(--light-text)"
