--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -47,9 +47,9 @@
 //   align-items: flex-end;
 // }
 
-// .flex_between {
-//   justify-content: space-between;
-// }
+.flex_between {
+  justify-content: space-between;
+}
 
 // .flex_between_center {
 //   justify-content: space-between;
@@ -66,9 +66,9 @@
 //   align-items: center;
 // }
 
-// .flex_justify_end {
-//   justify-content: flex-end;
-// }
+.flex_justify_end {
+  justify-content: flex-end;
+}
 
 // .flex_justify_center {
 //   justify-content: center;
