--- a/src/app/features/homepage/components/results/results.component.html
+++ b/src/app/features/homepage/components/results/results.component.html
@@ -74,7 +74,63 @@
 
   <!-- Posts -->
   <div class="posts">
-    
+
+    <mat-card class="card">
+      <div class="card-body">
+        <img src="/assets/images/img.jpg" alt="document-image" class="card-image">
+        <div class="card-content">
+          <mat-card-subtitle>Mariela bustamante - hace 2 semanas</mat-card-subtitle>
+          <mat-card-title>Planificacion de ejemplo</mat-card-title>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio omnis doloremque reprehenderit modi odio quam, illo officiis deserunt, sapiente vel cum labore deleniti minima? Rem ducimus nostrum reprehenderit odio veniam.</div>
+          <mat-chip-list class="tags">
+            <mat-chip class="tag axis-tag">
+              <span>Curso:</span>
+              <span>3ro básico</span>
+            </mat-chip>
+            <mat-chip class="tag axis-tag">
+              <span>Curso:</span>
+              <span>3ro básico</span>
+            </mat-chip>
+            <mat-chip class="tag axis-tag">
+              <span>Curso:</span>
+              <span>3ro básico</span>
+            </mat-chip>
+          </mat-chip-list>
+          <mat-chip-list class="tags">
+            <div class="total-docs">
+              <mat-icon>description</mat-icon>
+              <span>4 Documentos</span>
+            </div>
+            <mat-chip class="small-tag">
+              <span>.pdf</span>
+            </mat-chip>
+            <mat-chip class="small-tag">
+              <span>.docx</span>
+            </mat-chip>
+            <mat-chip class="small-tag">
+              <span>.pptx</span>
+            </mat-chip>
+            <mat-chip class="small-tag">
+              <span>.xlsx</span>
+            </mat-chip>
+          </mat-chip-list>
+        </div>
+      </div>
+      <mat-card-footer class="card-footer">
+        <div class="reaction-info">
+          <div>
+            <mat-icon>favorite</mat-icon>
+            <span>21 Me gusta</span>
+          </div>
+          <div>
+            <mat-icon>download</mat-icon>
+            <span>5 Descargas</span>
+          </div>
+        </div>
+        <mat-icon>favorite_outline</mat-icon>
+      </mat-card-footer>
+    </mat-card>
+
   </div>
 
   <!-- Bottom pagination -->
