--- a/src/app/features/homepage/components/results/results.component.scss
+++ b/src/app/features/homepage/components/results/results.component.scss
@@ -104,3 +104,40 @@
         justify-content: flex-end;  // mobile
     }
 }
+
+// Card style
+.card-body {
+    display: flex;
+    gap: 1rem;
+}
+
+.card-image {
+    height: 200px;
+    width: 150px;
+    // aspect-ratio: 2/3;
+    object-fit: cover;
+}
+
+.card-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin: 1rem 0 0 0;
+}
+
+.reaction-info {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    > div {
+        display: flex;
+        align-items: center;
+    }
+}
+
+.total-docs {
+    display: flex;
+    align-items: center;
+}
